--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-body {
+.toForm {
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -21,4 +21,5 @@ body {
 
 .index, form {
 	max-width: 700px;
+	margin-bottom: 0;
 }
